WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221197
imported/w3c/web-platform-tests/mediacapture-record/MediaRecorder-stop.html is flaky when GPUProcess is enabled
https://bugs.webkit.org/show_bug.cgi?id=221197
Summary
imported/w3c/web-platform-tests/mediacapture-record/MediaRecorder-stop.html i...
youenn fablet
Reported
2021-02-01 01:43:11 PST
imported/w3c/web-platform-tests/mediacapture-record/MediaRecorder-stop.html is flaky when GPUProcess is enabled
Attachments
Patch
(16.23 KB, patch)
2021-02-01 01:47 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2021-02-01 01:47:08 PST
Created
attachment 418844
[details]
Patch
Eric Carlson
Comment 2
2021-02-01 09:02:51 PST
Comment on
attachment 418844
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=418844&action=review
> Source/WebCore/Modules/mediarecorder/MediaRecorder.h:102 > + void stopRecordingInternal(CompletionHandler<void()>&& = [] { });
Nit: extra white space.
youenn fablet
Comment 3
2021-02-02 02:11:08 PST
(In reply to Eric Carlson from
comment #2
)
> Comment on
attachment 418844
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=418844&action=review
> > > Source/WebCore/Modules/mediarecorder/MediaRecorder.h:102 > > + void stopRecordingInternal(CompletionHandler<void()>&& = [] { }); > > Nit: extra white space.
I do not see it, landing for now, I can fix it post landing if needed.
EWS
Comment 4
2021-02-02 02:25:58 PST
Committed
r272200
: <
https://trac.webkit.org/changeset/272200
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 418844
[details]
.
Radar WebKit Bug Importer
Comment 5
2021-02-02 02:26:23 PST
<
rdar://problem/73871557
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug